# Robotica-UAO-2025-3

./: LICENSE  README.md  gui.py
Juan_Tovar/: cmddegree_publisher.py  consideraciones_wifi.txt  pc_to_espcomm.py
Juan_Tovar/esp32_degrees/: esp32_degrees.ino
Juan_Tovar/wifitest/: wifitest.ino
Nicolas Tafur/centauro/: package.xml
Nicolas Tafur/centauro/ddd/install/: setup.bash
Nicolas Tafur/mi_br/: setup.py
Nicolas_Tafur/centauro/: setup.py
Nicolas_Tafur/centauro/install/: local_setup.sh  setup.ps1  setup.sh
Nicolas_Tafur/centauro/launch/: centauro.launch.py  display.launch
Nicolas_Tafur/centauro/log/: latest_build
Nicolas_Tafur/centauro/mi_br/: fk_dh_test.py  fk_marker.py  joint_commander_deg.py  mi_br_interfaz.py  pinterfaz.py  serial_node.py
Nicolas_Tafur/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Nicolas_Tafur/log/: latest_build
Nicolas_Tafur/mi_br/: package.xml  setup.py
Nicolas_Tafur/mi_br/config/: mi_br_controllers.yaml
Nicolas_Tafur/mi_br/launch/: centauro.launch.py  control.launch.py  display.launch.py  gazebo.launch.py
Nicolas_Tafur/mi_br/mi_br/: backup_interfaz  joint_commander_deg.py  joint_state_publisher.py  pinterfaz.py  serial_node.py  spawn_urdf.py
Nicolas_Tafur/mi_br/urdf/: URDF_LINKS.urdf  simple_arm_description.urdf  simple_arm_description.urdf.xacro  simple_arm_ros2_control.xacro
Nicolas_Tafur/robot/: setup.py
Nicolas_Tafur/robot/install/: local_setup.sh  setup.ps1  setup.sh
Nicolas_Tafur/robot/launch/: centauro.launch.py
Nicolas_Tafur/robot/log/: latest_build
Nicolas_Tafur/robot/robot/: joint_commander_deg.py  pinterfaz.py  serial_node.py
Ricardo/Nicolas_Tafur/install/: local_setup.sh
Ricardo/Nicolas_Tafur/log/: latest_build
Ricardo/Nicolas_Tafur/robot/: setup.py
Ricardo/programacion_rob/: package.xml  setup.cfg  setup.py
Ricardo/programacion_rob/programacion_rob/: gui.py
backup/: movimiento suave dependiente de la velocidad para cada movimiento  movimiento suave dependiente de tiempo para realizar cada movimiento
backup/robot - aug 28 - 4:05/: setup.py
backup/robot - aug 28 - 4:05/robot/: joint_commander_deg.py  serial_node.py
backup/robot - buen urdf - mov smooth - funcionalidades bien adaptadas - Aug 30 7:28pm/install/: setup.bash  setup.zsh
backup/robot - gripper - conjointracker/: setup.py
backup/robot - urdf bonito - movimiento instantaneo/: setup.py
backup/robot-gripper-sinjointrajectory/: package.xml  setup.py
backup/robot-gripper-sinjointrajectory/launch/: centauro.launch.py
backup/robot-gripper-sinjointrajectory/robot/: joint_commander_deg.py  pinterfaz.py  serial_node.py
backup/robot-gripper-sinjointrajectory/urdf/: robot.xacro
backup/robot3/: setup.py
centauro_ros2/: setup.cfg  setup.py
centauro_ros2/interfaz/: mi_br_interfaz.py
centauro_ros2/launch/: simulacion.launch.py
centauro_ros2/mi_br/: joint_commander_deg.py
centauro_ws/: .gitignore  README.md  ik_cli_demo.py
log/: latest_build
(+132 files in other folders)
