<?xml version="1.0"?>
<package format="3">
  <name>centauro</name>
  <version>0.0.1</version>
  <description>Simulaci贸n y control de brazo rob贸tico 3DOF</description>
  <maintainer email="tronz_@todo.todo">tronz_</maintainer>
  <license>MIT</license>

  <!-- Dependencias de ejecuci贸n -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-tk</exec_depend>


  <!-- Dependencias de construcci贸n -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>ament_python</build_depend>

  <!-- Dependencias de prueba -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

